--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,10 +7,7 @@
       year={2023},
       eprint={2304.01197},
       archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      arxiv={arXiv:2304.01197},
-      preview={brownian-motion.gif},
-      website={https://mcmvmc.github.io/PersonalTelepresence/}
+      primaryClass={cs.CV}
 }
 
 % @string{aps = {American Physical Society,}}
