--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,5 +7,7 @@
       year={2023},
       eprint={2304.01197},
       archivePrefix={arXiv},
-      primaryClass={cs.CV}
+      primaryClass={cs.CV},
+      website={https://mcmvmc.github.io/PersonalTelepresence/},
+      arxiv={arXiv:2304.01197}
 }
