--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,5 +9,6 @@
       archivePrefix={arXiv},
       primaryClass={cs.CV},
       website={https://mcmvmc.github.io/PersonalTelepresence/},
-      arxiv={arXiv:2304.01197}
+      arxiv={arXiv:2304.01197},
+      selected={true}
 }
