--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,5 +10,6 @@
       primaryClass={cs.CV},
       website={https://mcmvmc.github.io/PersonalTelepresence/},
       arxiv={arXiv:2304.01197},
-      selected={true}
+      selected={true},
+      preview={telepresence.png}
 }
