--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@misc{wang2023bringing,
+@article{wang2023bringing,
       title={Bringing Telepresence to Every Desk}, 
       author={Shengze Wang and Ziheng Wang and Ryan Schmelzle and Liujie Zheng and YoungJoong Kwon and Soumyadip Sengupta and Henry Fuchs},
       year={2023},
@@ -11,5 +11,6 @@
       website={https://mcmvmc.github.io/PersonalTelepresence/},
       arxiv={arXiv:2304.01197},
       selected={true},
-      preview={telepresence.png}
+      preview={telepresence.png},
+      journal={arXiv}
 }
