--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,11 @@
 ---
 ---
+@inproceedings{guansen2024visually,
+      title={Visually-Informed Neural Binaural Audio Synthesis},
+      author={Guansen Tong* and Liujie Zheng* and Haosheng Shi* and Shengze Wang and Grace Fei and Praneeth Chakravarthula},
+      booktitle={SIGGRAPH},
+      year={2024 (Under Review)}
+}
 
 @article{wang2023bringing,
       title={Bringing Telepresence to Every Desk}, 
