--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,9 @@
       title={Visually-Informed Neural Binaural Audio Synthesis},
       author={Guansen Tong* and Liujie Zheng* and Haosheng Shi* and Shengze Wang and Grace Fei and Praneeth Chakravarthula},
       booktitle={SIGGRAPH},
-      year={2024 (Under Review)}
+      year={2024 (Under Review)},
+      preview={BAF.png},
+      selected={true}
 }
 
 @article{wang2023bringing,
