--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,9 +1,9 @@
 ---
 ---
-@inproceedings{guansen2024visually,
+@article{guansen2024visually,
       title={Visually-Informed Neural Binaural Audio Synthesis},
       author={Guansen Tong* and Liujie Zheng* and Haosheng Shi* and Shengze Wang and Grace Fei and Praneeth Chakravarthula},
-      booktitle={SIGGRAPH},
+      journal={Under Review SIGGRAPH},
       year={2024},
       preview={BAF.png},
       selected={true}
