--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
       author={Guansen Tong* and Liujie Zheng* and Haosheng Shi* and Shengze Wang and Grace Fei and Praneeth Chakravarthula},
       journal={Under Review SIGGRAPH},
       year={2024},
-      preview={BAF.png},
+      preview={BAS.png},
       selected={true}
 }
 
