--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
 
 @article{wang2023bringing,
       title={Bringing Telepresence to Every Desk}, 
-      author={Shengze Wang and Ziheng Wang and Ryan Schmelzle and Liujie Zheng and YoungJoong Kwon and Soumyadip Sengupta and Henry Fuchs},
+      author={Shengze Wang and Ziheng Wang and Ryan Schmelzle and Liujie Zheng and YoungJoong Kwon and Roni Sengupta and Henry Fuchs},
       year={2023},
       eprint={2304.01197},
       archivePrefix={arXiv},
