--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @article{guansen2024visually,
-      title={Visually-Informed Neural Binaural Audio Synthesis},
+      title={Visually-Informed Neural Binaural Audio Field},
       author={Guansen Tong* and Liujie Zheng* and Haosheng Shi* and Shengze Wang and Grace Fei and Praneeth Chakravarthula},
       journal={Under Review SIGGRAPH},
       year={2024},
