--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,24 +1,13 @@
 ---
 ---
-@article{guansen2024visually,
-      title={Visually-Informed Neural Binaural Audio Field},
-      author={Guansen Tong* and Liujie Zheng* and Haosheng Shi* and Shengze Wang and Grace Fei and Praneeth Chakravarthula},
-      journal={Under Review SIGGRAPH},
-      year={2024},
-      preview={BAS.png},
-      selected={true}
-}
+@ARTICLE{10557509,
+  author={Wang, Shengze and Wang, Ziheng and Schmelzle, Ryan and Zheng, Liujie and Kwon, YoungJoong and Sengupta, Roni and Fuchs, Henry},
+  journal={IEEE Transactions on Visualization and Computer Graphics}, 
+  title={Learning View Synthesis for Desktop Telepresence with Few RGBD Cameras}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-13},
+  keywords={Cameras;Telepresence;Videoconferences;Three-dimensional displays;Rendering (computer graphics);Streaming media;Sensors;Telepresence;Neural Rendering;Computer Vision;Computer Graphics},
+  doi={10.1109/TVCG.2024.3411626}}
 
-@article{wang2023bringing,
-      title={Bringing Telepresence to Every Desk}, 
-      author={Shengze Wang and Ziheng Wang and Ryan Schmelzle and Liujie Zheng and YoungJoong Kwon and Roni Sengupta and Henry Fuchs},
-      year={2023},
-      eprint={2304.01197},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      website={https://mcmvmc.github.io/PersonalTelepresence/},
-      arxiv={arXiv:2304.01197},
-      selected={true},
-      preview={telepresence.png},
-      journal={arXiv}
-}
