--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,8 @@
   volume={},
   number={},
   pages={1-13},
+  selected={true},
+  preview={telepresence.png},
   keywords={Cameras;Telepresence;Videoconferences;Three-dimensional displays;Rendering (computer graphics);Streaming media;Sensors;Telepresence;Neural Rendering;Computer Vision;Computer Graphics},
   doi={10.1109/TVCG.2024.3411626}}
 
